// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 DrHkh sc-iNqMTl gBktVj sc-jeGSBP bkWmPY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 DrHkh sc-iNqMTl gZlZKg sc-jeGSBP bkWmPY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 DrHkh sc-iNqMTl hrXUkK sc-jeGSBP bkWmPY"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 DrHkh sc-iNqMTl gBktVj sc-jeGSBP bkWmPY"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
